<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discount_text_placeholder">-%1\$s%%</string>
    <string name="price_text_placeholder">%1\$s$</string>
    <string name="rating_placeholder_text">5.0</string>
    <string name="brand_placeholder_text">Apple</string>
    <string name="offfer_title_placeholder_text">Apple</string>
    <string name="price_placeholder_text">549 $</string>
</resources>