<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OfferDetailFragment">

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/imageSlider"
        android:layout_marginHorizontal="1dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="257dp"
        app:iss_auto_cycle="false"
        app:iss_corner_radius="15"
        app:iss_delay="1000"
        app:iss_placeholder="@drawable/image_slider_placeholder"
        app:iss_error_image="@drawable/icon_internet_connection_error"
        app:iss_period="1000"
        app:iss_title_background="@drawable/default_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOfferTitle" />

    <TextView
        android:id="@+id/tvOfferBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/brand_placeholder_text"
        android:textColor="@color/black"
        android:paddingHorizontal="6dp"
        android:paddingVertical="2dp"
        android:background="@drawable/gray_rounded_background"
        android:textSize="14sp"
        android:fontFamily="@font/vk_sans_display_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSlider" />

    <TextView
        android:id="@+id/tvOfferTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vk_sans_display_bold"
        android:text="@string/offfer_title_placeholder_text"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOfferDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/vk_sans_display_demi_bold"
        android:text="@string/brand_placeholder_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOfferBrand" />

    <LinearLayout
        android:id="@+id/ratingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOfferDescription">

        <TextView
            android:id="@+id/tvOfferRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vk_sans_display_bold"
            android:text="@string/rating_placeholder_text"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_marginStart="4dp"
            style="@android:style/Widget.DeviceDefault.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="0.01" />
    </LinearLayout>

    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingLayout"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvOfferPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vk_sans_display_bold"
            android:text="@string/price_placeholder_text"
            android:textSize="22sp"
            android:textColor="@color/green"
           />

        <TextView
            android:id="@+id/tvOfferDiscount"
            android:paddingHorizontal="6dp"
            android:paddingVertical="2dp"
            android:background="@drawable/green_rounded_background"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vk_sans_display_demi_bold"
            android:text="@string/discount_text_placeholder"
            android:textSize="12sp"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>